--- a/qorc_apps_au/qorc_advancedfpga_mx/.vscode/settings.template.jsonc
+++ b/qorc_apps_au/qorc_advancedfpga_mx/.vscode/settings.template.jsonc
@@ -30,7 +30,7 @@
     "qorc_jlink_server_path" : "${config:qorc_sdk_path}/jlink_install/JLink_Linux_V760d_x86_64/JLinkGDBServerCLExe",
     
     // svd file path is optional, can be used to view device registers in peripherals view
-    "qorc_svd_file_path" : "${config:qorc_sdk_path}/eos_s3.svd",
+    //"qorc_svd_file_path" : "${config:qorc_sdk_path}/eos_s3.svd",
 
     // matrixide installation path
     "matrixide_install_path" : "${env:HOME}/matrixide_64",
