--- a/qorc_apps_au/qorc_advancedfpga_mx/GCC_Project/Makefile
+++ b/qorc_apps_au/qorc_advancedfpga_mx/GCC_Project/Makefile
@@ -2,6 +2,17 @@
 # Makefile for QORC SDK
 #
 
+
+# for all targets, check whether the QORC SDK environment has been setup first.
+ifndef QORC_SDK_PATH
+$(info )
+$(info QORC_SDK_PATH is not set in the environment, is the QORC SDK initialized?)
+$(info initialize with: 'source envsetup.sh' from the QORC SDK directory in the current shell)
+$(info )
+$(error QORC_SDK_PATH not defined)
+endif
+
+
 include config.mk
 
 VPATH:=$(OUTPUT_PATH)
