--- a/qorc_apps_au/qorc_advancedfpga_mx/GCC_Project/makefiles/Makefile_common
+++ b/qorc_apps_au/qorc_advancedfpga_mx/GCC_Project/makefiles/Makefile_common
@@ -3,11 +3,10 @@
 
 D_FILES:=$(addprefix $(DEPEND_PATH)$(DIR_SEP),$(SRCS:.c=.d))
 O_FILES:=$(addprefix $(OUTPUT_PATH)$(DIR_SEP),$(SRCS:.c=.o))
-R_FILES:=$(addprefix $(MAIN_FPGA_RTL_DIR)$(DIR_SEP),$(FPGA_RTL_SRCS))
 
 DEPFLAGS = -MT $@ -MMD -MP -MF $(DEPEND_PATH)/$*.d
 
-all: $(OBJS) $(MAIN_FPGA_RTL_DIR)/$(FPGA_RTL_OBJ)
+all: $(OBJS)
 
 #$(info QLFS SOURCE: ${SRCS})
 #$(info QLFS OBJS: ${OBJS})
@@ -18,10 +17,6 @@ all: $(OBJS) $(MAIN_FPGA_RTL_DIR)/$(FPGA_RTL_OBJ)
 $(OUTPUT_PATH)/%.o: $(SRC_PATH)/%.c $(DEPEND_PATH)/%.d
 	$(CC) $< $(CFLAGS) $(DEPFLAGS) $(INCLUDE_DIRS) -o $@
 	
-SYMBIFLOW_WARN_PATTERN="^Warning [0-9]\{1,\}:.*no timing specification"
-$(MAIN_FPGA_RTL_DIR)/$(FPGA_RTL_OBJ): $(R_FILES)
-	time ql_symbiflow  -compile -src $(MAIN_FPGA_RTL_DIR) -d ql-eos-s3 -t $(RTL_TOP_MODULE) -v $(FPGA_RTL_SRCS) -p quickfeather.pcf -P PU64 -dump binary jlink openocd | grep -v $(SYMBIFLOW_WARN_PATTERN)
-
 -include $(D_FILES))
 	
 
