--- a/qorc_apps_au/qorc_helloworldfpga/.vscode/settings.template.jsonc
+++ b/qorc_apps_au/qorc_helloworldfpga/.vscode/settings.template.jsonc
@@ -28,7 +28,7 @@
     "qorc_jlink_server_path" : "${config:qorc_sdk_path}/jlink_install/JLink_Linux_V760d_x86_64/JLinkGDBServerCLExe",
     
     // svd file path is optional, can be used to view device registers in peripherals view
-    "qorc_svd_file_path": "${config:qorc_sdk_path}/eos_s3.svd"
+    //"qorc_svd_file_path": "${config:qorc_sdk_path}/eos_s3.svd",
 }
 // Why is this file called jsonc?
 // VSCode treats settings.json (and other specific files) as a jsonc file, but not any other.
